---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: ????
  Changes:
    - Add preset for K2+248k and tweak 248k preset (Thanks to quindao)
    - GUI will now center when opening import/export window.
    - Add requester chest to Space Exploration presets.

  Bugfixes:
    - Fix crash when trying to import an empty string.
    - Attempt to fix some cases where the display GUI is still growing beyond screen borders (because of the "±Xm" estimations).

---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2022-08-21

  Changes:
    - Add preset addons for Bob's Modules, Brass Tacks, and If I Had A Nickel (Thanks to Xynariz)
    - Tweak some preset addons.

  Bugfixes:
    - Fix crash when the GUI was cleared by another mod or command (again!).

  Locale:
    - German translation thanks to knniDE.
    - Adjustment of some whitespace after strings (e.g. after "Completed at").

---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2022-08-15

  Changes:
    - The "created X items at" chat message will now format quantities of items starting at 10000 (as in, "10k" instead of 10000).

  Bugfixes:
    - Fix main GUI that could be too tall and not wide enough in some cases.
    - Fix GUI losing its position on every save file load.

  Locale:
    - Japanese translation thanks to nojio.

---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2022-07-11

  Changes:
    - The main GUI will now adjust its number of columns to avoid going beyond screen borders.
    - Remove ⓘ symbols from setting names now that Factorio does it automatically.
    - Add core fragments to SE presets.

  Bugfixes:
    - Fix crash when estimating milestones that were completed 1000+ hours ago.

  Locale: