@@ -9,12 +9,14 @@ milestones_check_frequency=Ticks between each check
 milestones_initial_preset=Initial preset
 milestones_compact_list=Compact list
 milestones_list_by_group=List by group
+milestones_show_estimations=Show estimations
 
 [mod-setting-description]
 milestones_check_frequency=The mod will wait this many ticks between each completion check.\nLower this if you care about time precision, raise if you want less performance impact.\nIf you set this to less than 60, the GUI will also show milliseconds.
 milestones_initial_preset=Initial preset loaded at the start of a map. Has no effect on existing games. Use Milestones' "export" feature in-game to get a string that you can paste here.
 milestones_compact_list=Removes the "Completed at" labels before each time.
 milestones_list_by_group=If checked, milestones will be grouped together in categories.\nIf unchecked, all milestones will be listed together chronologically.
+milestones_show_estimations=If checked, milestone times that were estimated from production history will show the estimation precision after the time (Looks like "(±5m)").
 
 [shortcut-name]
 milestones_toggle_gui=Show milestones
